--- a/src/main/resources/Application.yml
+++ b/src/main/resources/Application.yml
@@ -10,6 +10,18 @@ spring:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
+    open-in-view: false
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: badrikandikonda12@gmail.com
+    password: llohfdifntedadcq
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 server:
   port: 8080
