--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/nivara_db
-spring.datasource.username=Badrinath
-spring.datasource.password=Badri89@
+spring.datasource.username=root
+spring.datasource.password=Evergent_99#
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
